# smallchat_rust

./: Cargo.toml  LICENSE  README.md
src/: chat_lib.rs  smallchat.rs  smallchat_client.rs  smallchat_server.rs
